--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "@capacitor/keyboard": "5.0.5",
     "@capacitor/status-bar": "5.0.5",
     "@ionic/angular": "^7.0.0",
+    "file-saver": "^2.0.5",
     "ionicons": "^7.0.0",
+    "makerjs": "^0.18.0",
+    "opentype": "^1.3.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -45,6 +48,7 @@
     "@angular/language-service": "^16.0.0",
     "@capacitor/cli": "5.1.1",
     "@ionic/angular-toolkit": "^9.0.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
