--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "file-saver": "^2.0.5",
     "ionicons": "^7.0.0",
     "makerjs": "^0.18.0",
-    "opentype": "^1.3.4",
+    "opentype.js": "^1.3.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
